# claw

./: RFC-001-agent-sdk-migration.md
.github/workflows/: build-review-runner.yml
agent-bridge/: README.md  bridge.py  channel_tools.py  config.py  conversation.py  pyproject.toml
agent-orchestrator/: README.md  agents.py  cli_runner.py  dispatcher.py  ec2_infra.py  ec2_runner.py  ec2_stages.py  orchestrator.py  pyproject.toml  sdk_runner.py
agent-orchestrator/docs/: ec2-review-architecture.md
agent-orchestrator/tests/: test_ec2_infra.py  test_ec2_stages.py
infra/review-runner/: Dockerfile  run_stage.sh
infra/terraform/: ec2_review.tf
